--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "babel-plugin-nuke": "^0.0.1",
+    "nuke-core-js": "^0.0.1"
   }
 }
