--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.18.6",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
